# cookiecutter-pypackage-example

./: 404.html  Dockerfile  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.devcontainer/: .bashrc  Dockerfile  devcontainer.json
.github/actions/setup-poetry-env/: action.yml
.github/workflows/: on-release-main.yml
cookiecutter_pypackage_example/: foo.py
docs/: index.md  modules.md
modules/: index.html
search/: search_index.json
tests/: conftest.py  test_foo.py
