[tool.poetry]
name = "cookiecutter_pypackage_example"
version = "0.0.1"
description = "This is a template repository for Python projects that use Poetry for their dependency management."
authors = ["Xavier Duran <fxavier.duran@gmail.com>"]
repository = "https://github.com/xdurana/cookiecutter-pypackage-example"
documentation = "https://xdurana.github.io/cookiecutter-pypackage-example/"
readme = "README.md"
packages = [
  {include = "cookiecutter_pypackage_example"}
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"


[tool.poetry.dev-dependencies]
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^7.1.2"
mkdocs = "^1.3.0"
mkdocs-material = "^8.3.8"
mkdocstrings = "^0.18.1"
mypy = "^0.961"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
target-version = ['py39']
fast = true
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"
exclude = [
    '\.venv',
    'tests'
]
